Update title and description

--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Tracker</title>
-    <meta name="description" content="Counting them beans." />
+    <title>Doughbox</title>
+    <meta name="description" content="Self-hosted portfolio tracker." />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
